Admin Delete and Add Items

--- a/MenuPage.html
+++ b/MenuPage.html
@@ -25,8 +25,9 @@
         <div class="nav">
             <a id ="Menu">Menu</a>
             <a id ="Who we are"href="Who.html" rel="noopener noreferrer">Who we are</a>
-            <a id ="Rewerds"href="http://" target="_blank" rel="noopener noreferrer">Rewards</a>
+            <a id ="Rewards"href="rewards.html" target="_blank" rel="noopener noreferrer">Rewards</a>
             <a id ="Menu"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
+            <a id ="Featured"href="features.html" rel="noopener noreferrer">Featured Items</a>
         </div>
         <div class="userNav">
             <button class="Modalbutton Menu"><ion-icon name="location"></ion-icon>Set a Location</button>
@@ -59,6 +60,13 @@
         </ul>
         
     </nav>
+    <!--<div class = "Feature">
+        <img src = "Screenshot_14-11-2024_9455_127.0.0.1.jpeg">
+        <a id="Feat" href="features.html" target="_blank" rel="noopener noreferrer"
+            >FEATURED ITEMS</a
+          >
+    </div>
+    !-->
  
     
     <div class = "selection">    
