--- a/Who.html
+++ b/Who.html
@@ -36,7 +36,7 @@
           rel="noopener noreferrer"
           >Home</a
         >
-        <a id="Menu" href="menu.html" target="_blank" rel="noopener noreferrer"
+        <a id="Menu" href="MenuPage.html" target="_blank" rel="noopener noreferrer"
           >Menu</a
         >
         <a
