--- a/admin.html
+++ b/admin.html
@@ -475,6 +475,8 @@
     <input type="number" id="itemPrice" name="itemPrice"><br><br>
     <label for="itemDescription">Item Description:</label>
     <textarea id="itemDescription" name="itemDescription"></textarea><br><br>
+    <label for = "itemSection">Section</label>
+    <input type="text" id="itemSection" name="itemSection"><br><br>
     <input type="submit" value="Add Item">
     <button onclick = "clearForm()" id = "clearBtn" title = "Clear form">Clear</button>
   </form>
