--- a/rewards.html
+++ b/rewards.html
@@ -64,8 +64,12 @@
           <a href="Sign-in.html"
             ><ion-icon id="UserProf" name="person-circle-outline"></ion-icon
           ></a>
+
+          <a href = "FinalCartpage.html">
           <ion-icon id="Cart" name="cart"></ion-icon>
-          <a id="Navbtn" href="http://" target="_blank" rel="noopener noreferrer"
+          </a>
+
+          <a id="Navbtn" href="" target="_blank" rel="noopener noreferrer"
             >Order Now</a
           >
         </div>
