--- a/FinalCartpage.html
+++ b/FinalCartpage.html
@@ -34,7 +34,7 @@
         <a id="Who we are" href="Who.html" rel="noopener noreferrer"
           >Who we are</a
         >
-        <a id="Rewards" href="" target="_blank" rel="noopener noreferrer"
+        <a id="Rewards" href="rewards.html"rel="noopener noreferrer"
           >Rewards</a
         >
         <input
@@ -110,6 +110,13 @@
                 <button class="tip-btn">15%</button>
                 <button class="tip-btn">20%</button>
                 <button class="tip-btn">No Tip</button>
+              </div>
+              <div class="Couponcontainer">
+                <h5>Coupons</h5>
+                <div class="CouponEnterSection">
+                  <input type="text" name="Coupon" id="CouponID" placeholder="EnterCoupon">
+                  <button class = "CouponSubmit" id="CouponBtn">Enter</button>
+                </div>
               </div>
             </div>
             <div class="Summmary-Container">
