--- a/Who.html
+++ b/Who.html
@@ -32,21 +32,19 @@
         <a
           id="Home"
           href= "index.html"
-          target="_blank"
           rel="noopener noreferrer"
           >Home</a
         >
-        <a id="Menu" href="menu.html" target="_blank" rel="noopener noreferrer"
+        <a id="Menu" href="MenuPage.html" rel="noopener noreferrer"
           >Menu</a
         >
         <a
           id="Who we are"
           href= "Who.html"
-          target="_blank"
           rel="noopener noreferrer"
           >Who we are</a
         >
-        <a id="Rewards" href="rewards.html" target="_blank" rel="noopener noreferrer"
+        <a id="Rewards" href="rewards.html" rel="noopener noreferrer"
           >Rewards</a
         >
         <input
@@ -68,8 +66,8 @@
         <a href="Sign-in.html"
           ><ion-icon id="UserProf" name="person-circle-outline"></ion-icon
         ></a>
-        <ion-icon id="Cart" name="cart"></ion-icon>
-        <a id="Navbtn" href="http://" target="_blank" rel="noopener noreferrer"
+        <a href="FinalCartpage.html"><ion-icon id="Cart" name="cart"></ion-icon></a>
+        <a id="Navbtn" href="MenuPage.html" target="_blank" rel="noopener noreferrer"
           >Order Now</a
         >
       </div>
