--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         <a
           id="Who we are"
           href= "Who.html"
-          target="_blank"
           rel="noopener noreferrer"
           >Who we are</a
         >
@@ -62,7 +61,7 @@
           ><ion-icon id="UserProf" name="person-circle-outline"></ion-icon
         ></a>
         <a href="FinalCartpage.html"><ion-icon id="Cart" name="cart"></ion-icon></a>
-        <a id="Navbtn" href="http://" target="_blank" rel="noopener noreferrer"
+        <a id="Navbtn" href="MenuPage.html" rel="noopener noreferrer"
           >Order Now</a
         >
       </div>
