fixedCaterMergeError git commit -m fixedCaterMergeError

--- a/catering.html
+++ b/catering.html
@@ -111,7 +111,7 @@
 		<div class="menu-body">
 			<nav class="menu-section">
 				<div class="cta">
-					<img src="media/lph-logos.png" />
+					<img src="LosPollosImages-gif/lph-logos.png" />
 				</div>
 
 				<ul class="menu-nav">
