--- a/Sign-in.html
+++ b/Sign-in.html
@@ -18,9 +18,9 @@
       />
       <h1>WELCOME</h1>
 
-      <input type="text" id="email" placeholder="Email" />
+      <input type="text" id="email" placeholder="Email" autocomplete="off"/>
       <br />
-      <input type="text" id="password" placeholder="Password" />
+      <input type="text" id="password" placeholder="Password" autocomplete="off"/>
       <br />
       <button id="Signup-btn">SIGN UP</button>
       <br />
