--- a/receipt.html
+++ b/receipt.html
@@ -1,122 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Order Receipt - Los Pollos Hermanos</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Bubblegum+Sans&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Bubblegum+Sans&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="receipt.css">
-</head>
-<body>
-    <div class="header">
-        <div class="logo">
-            <img id = "logo" src="LosPollosHermanosLogo2.webp" alt="LosPollosHermanosLogo">
-        </div>
-        <div class="nav">
-            <a id ="Menu"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
-            <a id ="Who we are"href="http://" target="_blank" rel="noopener noreferrer">Who we are</a>
-            <a id ="Rewards"href="http://" target="_blank" rel="noopener noreferrer">Rewards</a>
-            <a id ="Menu"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
-        </div>
-        <div class="userNav">
-            <a id ="Set-a-location" href="http://" target="_blank" rel="noopener noreferrer">Set a Location</a>
-            <ion-icon  id="UserProf"name="person-circle-outline"></ion-icon>
-            <a class= "btnLink" href="http://" target="_blank" rel="noopener noreferrer">Order Now</a>
-        </div>
-    </div>
-    
-    <div class="receipt-container">
-        <header>
-            <div class="logo-small">
-                <span><img src = "LosPollosHermanosLogo2.webp"></span>
-            </div>
-            <h1>Order Complete!</h1>
-            <p>Thanks for choosing Los Pollos Hermanos</p>
-        </header>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0" />
+		<meta
+			http-equiv="X-UA-Compatible"
+			content="ie=edge" />
+		<title>Order Receipt - Los Pollos Hermanos</title>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
+			rel="stylesheet" />
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+			rel="stylesheet" />
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com" />
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Bubblegum+Sans&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+			rel="stylesheet" />
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com" />
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Bubblegum+Sans&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&display=swap"
+			rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="receipt.css" />
+	</head>
+	<body>
+		<div class="header">
+			<div class="logo">
+				<img
+					id="logo"
+					src="LosPollosHermanosLogo2.webp"
+					alt="LosPollosHermanosLogo" />
+			</div>
+			<div class="nav">
+				<a
+					id="Menu"
+					href="http://"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Menu</a
+				>
+				<a
+					id="Who we are"
+					href="http://"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Who we are</a
+				>
+				<a
+					id="Rewards"
+					href="http://"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Rewards</a
+				>
+				<a
+					id="Menu"
+					href="http://"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Menu</a
+				>
+			</div>
+			<div class="userNav">
+				<a
+					id="Set-a-location"
+					href="http://"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Set a Location</a
+				>
+				<ion-icon
+					id="UserProf"
+					name="person-circle-outline"></ion-icon>
+				<a
+					class="btnLink"
+					href="http://"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Order Now</a
+				>
+			</div>
+		</div>
 
-        <!-- ----------------------------------------------------------------------- -->
-        <!--                          Progress Bar Section                           -->
-        <!-- ----------------------------------------------------------------------- -->
-        <section class="order-status">
-            <h2>Order Status</h2>
-            <div class="progress-bar">
-                <div class="progress-step" id="received">
-                    <span>Order Received</span>
-                </div>
-                <div class="progress-step" id="preparation">
-                    <span>In Preparation</span>
-                </div>
-                <div class="progress-step" id="delivery">
-                    <span>On Its Way</span>
-                </div>
-                <div class="progress-step" id="delivered">
-                    <span>Delivered</span>
-                </div>
-            </div>
-        </section>
+		<div class="receipt-container">
+			<header>
+				<div class="logo-small">
+					<span><img src="LosPollosHermanosLogo2.webp" /></span>
+				</div>
+				<h1>Order Complete!</h1>
+				<p>Thanks for choosing Los Pollos Hermanos</p>
+			</header>
 
-        <section class="order-summary">
-            <h2>Order Summary</h2>
-            <div class="order-details">
-                <p><strong>Order Number:</strong> #987654</p>
-                <p><strong>Date:</strong> <span id="order-date"></span></p>
-                <p><strong>Time:</strong> <span id="order-time"></span></p>
-            </div>
-        </section>
+			<!-- ----------------------------------------------------------------------- -->
+			<!--                          Progress Bar Section                           -->
+			<!-- ----------------------------------------------------------------------- -->
+			<section class="order-status">
+				<h2>Order Status</h2>
+				<div class="progress-bar">
+					<div
+						class="progress-step"
+						id="received">
+						<span>Order Received</span>
+					</div>
+					<div
+						class="progress-step"
+						id="preparation">
+						<span>In Preparation</span>
+					</div>
+					<div
+						class="progress-step"
+						id="delivery">
+						<span>On Its Way</span>
+					</div>
+					<div
+						class="progress-step"
+						id="delivered">
+						<span>Delivered</span>
+					</div>
+				</div>
+			</section>
 
-        <section class="items">
-            <h2>What's Cookin'?</h2>
-            <ul class="item-list">
-                <li>
-                    <div class="item-details">
-                        <p><strong>Crispy Chicken Sandwich</strong> - $4.99</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="item-details">
-                        <p><strong>Pollo Curly fries (Small)</strong> - $2.50</p>
-                    </div>
-                </li>
-                <li>
-                    <div class="item-details">
-                        <p><strong>Fountain Drink (Coca cola)</strong> - $1.30</p>
-                    </div>
-                </li>
-            </ul>
-        </section>
+			<section class="order-summary">
+				<h2>Order Summary</h2>
+				<div class="order-details">
+					<p><strong>Order Number:</strong> #987654</p>
+					<p><strong>Date:</strong> <span id="order-date"></span></p>
+					<p><strong>Time:</strong> <span id="order-time"></span></p>
+				</div>
+			</section>
 
-        <section class="totals">
-            <h2>Your Total</h2>
-            <div class="total-row">
-                <p>Subtotal:</p>
-                <p>$8.79</p>
-            </div>
-            <div class="total-row">
-                <p>Delivery Fee:</p>
-                <p>$2.50</p>
-            </div>
-            <div class="total-row">
-                <p><strong>Total:</strong></p>
-                <p><strong>$11.29</strong></p>
-            </div>
-        </section>
+			<section class="items">
+				<h2>What's Cookin'?</h2>
+				<ul class="item-list">
+					<li>
+						<div class="item-details">
+							<p><strong>Crispy Chicken Sandwich</strong> - $4.99</p>
+						</div>
+					</li>
+					<li>
+						<div class="item-details">
+							<p><strong>Pollo Curly fries (Small)</strong> - $2.50</p>
+						</div>
+					</li>
+					<li>
+						<div class="item-details">
+							<p><strong>Fountain Drink (Coca cola)</strong> - $1.30</p>
+						</div>
+					</li>
+				</ul>
+			</section>
 
-        <footer>
-            <div class="cta">
-                <a href="#menu.html" class="cta-button">Order Again</a>
-            </div>
-        </footer>
-    </div>
-<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
-<script src = "progress.js"></script>
-</body>
+			<section class="totals">
+				<h2>Your Total</h2>
+				<div class="total-row">
+					<p>Subtotal:</p>
+					<p>$8.79</p>
+				</div>
+				<div class="total-row">
+					<p>Delivery Fee:</p>
+					<p>$2.50</p>
+				</div>
+				<div class="total-row">
+					<p><strong>Total:</strong></p>
+					<p><strong>$11.29</strong></p>
+				</div>
+			</section>
+
+			<footer>
+				<div class="cta">
+					<a
+						href="#menu.html"
+						class="cta-button"
+						>Order Again</a
+					>
+				</div>
+			</footer>
+		</div>
+
+		<!-- ----------------------------------------------------------------------- -->
+		<!--                            Footer Section                               -->
+		<!-- ----------------------------------------------------------------------- -->
+		<footer>
+			<div class="footer-container">
+				<div class="about">
+					<a href="#">Services</a>
+					<a href="#">Testimonials</a>
+					<a href="#">Contact us</a>
+				</div>
+				<div class="icon-footer">
+					<a href="http://"><ion-icon name="logo-facebook"></ion-icon></a>
+					<a href="http://"><ion-icon name="logo-twitter"></ion-icon></a>
+					<a
+						href="https://www.instagram.com/eatlospolloshermanos/"
+						target="_blank"
+						><ion-icon name="logo-instagram"></ion-icon
+					></a>
+				</div>
+				<section class="secret">
+					<img
+						id="SecretGus"
+						src="media/Gus Frank Icon.svg"
+						alt="GusSecret" />
+				</section>
+				<div class="copyright">
+					<p>
+						Los Pollos Hermanos Inc. is a registered trademark of Madrigal
+						Electromotive GmbH
+					</p>
+				</div>
+			</div>
+		</footer>
+		<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+		<script src="progress.js"></script>
+	</body>
 </html>
