--- a/catering.html
+++ b/catering.html
@@ -45,52 +45,63 @@
 		<!-- ----------------------------------------------------------------------- -->
 		<!--                            Page Navigation                            -->
 		<!-- ----------------------------------------------------------------------- -->
-        <header id="Page1" class="header">
-            <div class="logo">
-              <img
-                id="logo"
-                src="LosPollosHermanosLogo2.webp"
-                alt="LosPollosHermanosLogo"
-              />
-            </div>
-            <div class="nav">
-              <a
-                id="Menu"
-                href="MenuPage.html"
-                rel="noopener noreferrer"
-                >Menu</a
-              >
-              <a
-                id="Who we are"
-                href= "Who.html"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Who we are</a
-              >
-              <a id="Rewards" href="rewards.html" target="_blank" rel="noopener noreferrer"
-                >Rewards</a
-              >
-              <input
-                type="search"
-                name="Searchbar"
-                id="Searchbar"
-                placeholder="Search"
-              />
-            </div>
-            <div class="userNav">
-              <button class = "Modalbutton Main">
-                <ion-icon name="location"></ion-icon>Set a Location
-              </button>
-      
-              <a href="Sign-in.html"
-                ><ion-icon id="UserProf" name="person-circle-outline"></ion-icon
-              ></a>
-              <a href="FinalCartpage.html"><ion-icon id="Cart" name="cart"></ion-icon></a>
-              <a id="Navbtn" href="http://" target="_blank" rel="noopener noreferrer"
-                >Order Now</a
-              >
-            </div>
-          </header>
+        <header class="header">
+			<div class="logo">
+				<img
+					id="logo"
+					src="LosPollosHermanosLogo2.webp"
+					alt="LosPollosHermanosLogo" />
+			</div>
+			<div class="nav">
+				<a
+					id="Menu"
+					href="http://"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Menu</a
+				>
+				<a
+					id="Who we are"
+					href="http://"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Who We Are</a
+				>
+				<a
+					id="Rewards"
+					href="http://"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Rewards</a
+				>
+				<a
+					id="Catering"
+					href="http://"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Catering</a
+				>
+			</div>
+			<div class="userNav">
+				<a
+					id="Set-a-location"
+					href="http://"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Set a Location</a
+				>
+				<ion-icon
+					id="UserProf"
+					name="person-circle-outline"></ion-icon>
+				<a
+					class="btnLink"
+					href="http://"
+					target="_blank"
+					rel="noopener noreferrer"
+					>Order Now</a
+				>
+			</div>
+		</header>
 
 		<!-- ----------------------------------------------------------------------- -->
 		<!--                               Menu Start                                -->
@@ -99,8 +110,12 @@
 		<div class="menu-body">
 			<nav class="menu-section">
 				<div class="cta">
-					<img src="media/lph-logos.png" />
+					<div class="cta-inner">
+						<!-- <img src="lph-logos.png" /> -->
+						<p>CATERING MENU</p>
+					</div>
 				</div>
+
 
 				<ul class="menu-nav">
 					<li><a href="#sandwich-package">Sandwich Party Package</a></li>
@@ -114,7 +129,7 @@
             <div class="menu-heading">
                 <h2 class="catering-title">Online Catering Order Menu</h2>
                 <p>
-                    Please make sure you have filled the  <span><a href="index.html#catering-section">form here</a></span> before ordering.
+                    Have any special requests or need some help choosing the right selection for your gathering? Fill out the <span><a href="catering-form.html">form here</a></span> and we'll help you get started!
                 </p>
             </div>
 			
@@ -408,6 +423,50 @@
 				<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 			</div>
 		</div>
+
+
+
+		    <!-- ----------------------------------------------------------------------- -->
+    <!--                            Footer Section                               -->
+    <!-- ----------------------------------------------------------------------- -->
+    <footer>
+		<div class="footer-container">
+		  <div class="about">
+			<a href="#">Services</a>
+			<a href="#">Testimonials</a>
+			<a href="#">Contact us</a>
+		  </div>
+		  <div class="icon-footer">
+			<a href="http://"><ion-icon name="logo-facebook"></ion-icon></a>
+			<a href="http://"><ion-icon name="logo-twitter"></ion-icon></a>
+			<a
+			  href="https://www.instagram.com/eatlospolloshermanos/"
+			  target="_blank"
+			  ><ion-icon name="logo-instagram"></ion-icon
+			></a>
+		  </div>
+		  <section class="secret">
+			<img
+			  id="SecretGus"
+			  src="media/Gus Frank Icon.svg"
+			  alt="GusSecret"
+			/>
+		  </section>
+		  <div class="copyright">
+		  <p>Los Pollos Hermanos Inc. is a registered trademark of Madrigal Electromotive GmbH</p>
+		</div>
+		</div>
+		
+	  </footer>
+        
         <script src = "menu.js"></script>
+        <script
+		type="module"
+		src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+	  ></script>
+	  <script
+		nomodule
+		src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+	  ></script>
 	</body>
 </html>
