--- a/MenuPage.html
+++ b/MenuPage.html
@@ -547,5 +547,30 @@
         nomodule
         src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
       ></script>
+
+      <div class ="items-container" id="menuContainer"></div>
+
+      <!-- <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const menuItems = JSON.parse(localStorage.getItem("menuItems"));
+            const menuContainer = document.getElementById("menuContainer");
+
+            menuItems.forEach(item => {
+                const itemCard = document.createElement("div");
+                itemCard.className = "item-card";
+
+                itemCard.innerHTML = `
+                <div class ="item-info">
+                    <h4 class="item-header">${item.name}</h4>
+                    <p class="item-description">${item.description}</p>
+                </div>
+                <div class="price">$<span>${item.price}</span> <button class="btn menu-add">Add to Cart</button></div>
+                `;
+
+                menuContainer.appendChild(itemCard);
+
+            });
+        });
+      </script> -->
 </body>
 </html>
