Guest Cant have Rewards or UserProfile

--- a/Sign-in.html
+++ b/Sign-in.html
@@ -25,6 +25,9 @@
       <button id="Signup-btn">SIGN UP</button>
       <br />
       <button id="Login-btn">LOGIN</button>
+      <br />
+      <button onclick="joinAsGuest();">JOIN AS GUEST</button>
+      
     </div>
     <div class="video">
       <video autoplay loop muted plays-inline class="background-clip">
