--- a/index.html
+++ b/index.html
@@ -67,6 +67,20 @@
         >
       </div>
     </header>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+    const userStatus = localStorage.getItem("userStatus");
+    if (userStatus == "guest") {
+        document.getElementById("Rewards").style.display = "none";
+        document.getElementById("UserProf").style.display = "none";
+    }
+    else {
+        document.getElementById("Rewards").style.display = "block";
+        document.getElementById("UserProf").style.display = "block";
+    }
+});
+
+    </script>
 <!-- ----------------------------------------------------------------------- -->
 <!--                            First Video Block                            -->
 <!-- ----------------------------------------------------------------------- -->
