--- a/admin.html
+++ b/admin.html
@@ -26,7 +26,7 @@
     <div class="nav">
         <a id ="Menu"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
         <a id ="Who we are"href="http://" target="_blank" rel="noopener noreferrer">Who we are</a>
-        <a id ="Rewerds"href="http://" target="_blank" rel="noopener noreferrer">Rewards</a>
+        <a id ="Rewards"href="http://" target="_blank" rel="noopener noreferrer">Rewards</a>
         <a id ="Menu"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
     </div>
     <div class="userNav">
