made it for all pages

--- a/MenuPage.html
+++ b/MenuPage.html
@@ -572,5 +572,20 @@
             });
         });
       </script> -->
+
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
+      const userStatus = localStorage.getItem("userStatus");
+      if (userStatus == "guest") {
+          document.getElementById("Rewards").style.display = "none";
+          document.getElementById("UserProf").style.display = "none";
+      }
+      else {
+          document.getElementById("Rewards").style.display = "block";
+          document.getElementById("UserProf").style.display = "block";
+      }
+  });
+  
+      </script>
 </body>
 </html>
