Updated Styles for Consistency

--- a/catering.html
+++ b/catering.html
@@ -39,8 +39,13 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Bubblegum+Sans&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&display=swap"
 			rel="stylesheet" />
-
-	</head>
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Rum+Raisin&display=swap" rel="stylesheet">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+        </head>
 	<body>
 		<!-- ----------------------------------------------------------------------- -->
 		<!--                            Page Navigation                            -->
@@ -115,7 +120,7 @@
 						<p>CATERING MENU</p>
 					</div>
 				</div>
-
+            </nav>
 
 				<ul class="menu-nav">
 					<li><a href="#sandwich-package">Sandwich Party Package</a></li>
@@ -124,12 +129,15 @@
 					<li><a href="#side-package">Side Lovers Package</a></li>
 					<li><button class="location-button"><ion-icon name="pin"></ion-icon> </button></li>
 				</ul>
-			</nav>
+			
 
             <div class="menu-heading">
-                <h2 class="catering-title">Online Catering Order Menu</h2>
+                <h2 class="catering-title"> Catering Order Form</h2>
+                <br>
                 <p>
-                    Have any special requests or need some help choosing the right selection for your gathering? Fill out the <span><a href="catering-form.html">form here</a></span> and we'll help you get started!
+                    Have any special requests or need some help choosing the right selection for your gathering?
+                    <br>
+                     Fill out the <span><a href="catering-form.html">form here</a></span> and we'll help you get started!
                 </p>
             </div>
 			
