--- a/catering.html
+++ b/catering.html
@@ -50,63 +50,26 @@
 		<!-- ----------------------------------------------------------------------- -->
 		<!--                            Page Navigation                            -->
 		<!-- ----------------------------------------------------------------------- -->
-        <header class="header">
-			<div class="logo">
-				<img
-					id="logo"
-					src="LosPollosHermanosLogo2.webp"
-					alt="LosPollosHermanosLogo" />
-			</div>
-			<div class="nav">
-				<a
-					id="Menu"
-					href="http://"
-					target="_blank"
-					rel="noopener noreferrer"
-					>Menu</a
-				>
-				<a
-					id="Who we are"
-					href="http://"
-					target="_blank"
-					rel="noopener noreferrer"
-					>Who We Are</a
-				>
-				<a
-					id="Rewards"
-					href="http://"
-					target="_blank"
-					rel="noopener noreferrer"
-					>Rewards</a
-				>
-				<a
-					id="Catering"
-					href="http://"
-					target="_blank"
-					rel="noopener noreferrer"
-					>Catering</a
-				>
-			</div>
-			<div class="userNav">
-				<a
-					id="Set-a-location"
-					href="http://"
-					target="_blank"
-					rel="noopener noreferrer"
-					>Set a Location</a
-				>
-				<ion-icon
-					id="UserProf"
-					name="person-circle-outline"></ion-icon>
-				<a
-					class="btnLink"
-					href="http://"
-					target="_blank"
-					rel="noopener noreferrer"
-					>Order Now</a
-				>
-			</div>
-		</header>
+        <header id="MenuPage" class="header">
+            <div class="logo">
+                <img id = "logo" src="LosPollosHermanosLogo2.webp" alt="LosPollosHermanosLogo">
+            </div>
+            <div class="nav">
+                <a id ="Menu">Menu</a>
+                <a id ="Who we are"href="Who.html" rel="noopener noreferrer">Who we are</a>
+                <a id ="Rewerds"href="http://" target="_blank" rel="noopener noreferrer">Rewards</a>
+                <a id ="Catering"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
+            </div>
+            <div class="userNav">
+                <button class="Modalbutton Menu"><ion-icon name="location"></ion-icon>Set a Location</button>
+                <a href="Sign-in.html"
+                  ><ion-icon id="UserProf" name="person-circle-outline"></ion-icon
+                ></a>
+                <a href="FinalCartpage.html"><ion-icon id="Cart" name="cart"></ion-icon></a>
+                <a id="Navbtn" href="MenuPage.html" rel = "noopener noreferrer">Order Now</a
+                >
+            </div>
+        </header>
 
 		<!-- ----------------------------------------------------------------------- -->
 		<!--                               Menu Start                                -->
@@ -153,7 +116,7 @@
                     <div class = " title-style ">
                         <h2 class = "section-title">Sandwich Party Package</h2>
                     </div>
-				<div class="items-container">
+				    <div class="items-container">
 					<div class="item-card">
 						<img src="menu2/sando-party.jpg" />
 						<div class="item-info">
@@ -434,7 +397,7 @@
 
 
 
-		    <!-- ----------------------------------------------------------------------- -->
+	<!-- ----------------------------------------------------------------------- -->
     <!--                            Footer Section                               -->
     <!-- ----------------------------------------------------------------------- -->
     <footer>
