help fix the discount

--- a/FinalCartpage.html
+++ b/FinalCartpage.html
@@ -75,6 +75,7 @@
                     <h6>Name</h6>
                     <input
                       class="Name"
+                      id ="FirstName"
                       type="text"
                       placeholder="First Name"
                       required
@@ -84,6 +85,7 @@
                     <h6>Last Name</h6>
                     <input
                       class="Name Last"
+                      id="LastName"
                       type="text"
                       placeholder="Last Name"
                     />
@@ -124,7 +126,9 @@
                 <h5>Order Summary</h5>
                 <p id="TotalPrice">Total:</p>
                 <p id="tax">Tax:</p>
+                <p id="Discount">Discount:</p>
                 <p id="tip">Tip:</p>
+
                 <h4 id="FinalTotal">Order Total</h4>
               </div>
             </div>
@@ -157,6 +161,7 @@
                     id="CardNumber"
                     required
                   />
+                  
                 </div>
               </div>
 
