--- a/MenuPage.html
+++ b/MenuPage.html
@@ -25,8 +25,8 @@
         <div class="nav">
             <a id ="Menu">Menu</a>
             <a id ="Who we are"href="Who.html" rel="noopener noreferrer">Who we are</a>
-            <a id ="Rewerds"href="http://" target="_blank" rel="noopener noreferrer">Rewards</a>
-            <a id ="Menu"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
+            <a id ="Rewards" href="rewards.html" rel="noopener noreferrer">Rewards</a>
+            <a id ="Menu"href="http://"  rel="noopener noreferrer">Menu</a>
         </div>
         <div class="userNav">
             <button class="Modalbutton Menu"><ion-icon name="location"></ion-icon>Set a Location</button>
