added contact page and Special requirement password

--- a/index.html
+++ b/index.html
@@ -232,12 +232,12 @@
     <footer>
       <div class="footer-container">
         <div class="about">
-          <a href="#">Services</a>
+          <a href="Services.html">Services</a>
           <a href="#">Testimonials</a>
-          <a href="#">Contact us</a>
+          <a href="Contact.html">Contact us</a>
         </div>
         <div class="icon-footer">
-          <a href="http://"><ion-icon name="logo-facebook"></ion-icon></a>
+          <a href="https://www.facebook.com/eatlospolloshermanos/photos/"><ion-icon name="logo-facebook"></ion-icon></a>
           <a href="http://"><ion-icon name="logo-twitter"></ion-icon></a>
           <a
             href="https://www.instagram.com/eatlospolloshermanos/"
