added gus modal

--- a/index.html
+++ b/index.html
@@ -286,13 +286,21 @@
             src="LosPollosImages-gif/Gus Frank Icon.svg"
             alt="GusSecret"
           />
+          <audio src="LosPollosImages-gif/Gustavo Frank saying hello.mp3"></audio>
         </section>
       </div>
     </footer>
     <!-- ----------------------------------------------------------------------- -->
     <!--                                Modal Boxes                                -->
     <!-- ----------------------------------------------------------------------- -->
-
+<section class ="SecretModal Main">
+  <div class="secretpopup-container">
+    <div class = "SecretCard">
+      <h3>Take this code</h3>
+      <p>RESTGUS</p>
+    </div>
+  </div>
+</section>
     <section class="modal Main">
       <div class="popup-container">
         <div id="Main-Delivery-modal" class="popup-card">
