Transfered data to reciept

--- a/FinalCartpage.html
+++ b/FinalCartpage.html
@@ -193,7 +193,9 @@
                 </div>
               </div>
             </div>
-            <button id="PlaceOrderBtn">Place Order</button>
+            <button id="PlaceOrderBtn">Place Order
+              
+            </button>
           </div>
         </div>
         <div class="Final-Cart-Container">
