--- a/receipt.html
+++ b/receipt.html
@@ -112,7 +112,7 @@
 
         <footer>
             <div class="cta">
-                <a href="#menu.html" class="cta-button">Order Again</a>
+                <button href="MenuPage.html" id="cta-button">Order Again</button>
             </div>
         </footer>
     </div>
