--- a/MenuPage.html
+++ b/MenuPage.html
@@ -136,9 +136,11 @@
 							</div>
 							<div class="items-container">
 								<div class="item-card">
-									<img
-										src="media/huevorancheros.png"
-										alt="huevos rancheros" />
+									<div class="item-img">
+										<img
+											src="media/huevorancheros.png"
+											alt="huevos rancheros" />
+									</div>
 									<div class="item-info">
 										<h4 class="item-header">Huevos Rancheros</h4>
 										<div class="price">$<span>5.99</span></div>
@@ -153,9 +155,11 @@
 								</div>
 
 								<div class="item-card">
-									<img
-										src="media/avocadorancheros.webp"
-										alt="carne avocado rancheros" />
+									<div class="item-img">
+										<img
+											src="media/avocadorancheros.webp"
+											alt="carne avocado rancheros" />
+									</div>
 									<div class="item-info">
 										<h4 class="item-header">Carne Avocado Rancheros</h4>
 										<div class="price">$<span>5.99</span></div>
@@ -178,11 +182,13 @@
 								</div>
 								<div class="items-container">
 									<div class="item-card">
-										<img
-											src="media/potato.jpg"
-											alt="classic burrito" />
+										<div class="item-img">
+											<img
+												src="media/potato.jpg"
+												alt="classic burrito" />
+										</div>
 										<div class="item-info">
-											<h4 class="item-header">Huevos Rancheros</h4>
+											<h4 class="item-header">Classic Burrito</h4>
 											<div class="price">$<span>2.49</span></div>
 											<p class="item-description">Egg & potato</p>
 											<div class="card-bottom">
@@ -192,9 +198,11 @@
 									</div>
 
 									<div class="item-card">
-										<img
-											src="media/combo.jpg"
-											alt="New Mexico burrito" />
+										<div class="item-img">
+											<img
+												src="media/combo.jpg"
+												alt="New Mexico burrito" />
+										</div>
 										<div class="item-info">
 											<h4 class="item-header">New Mexico</h4>
 											<div class="price">$<span>5.99</span></div>
@@ -208,9 +216,11 @@
 									</div>
 
 									<div class="item-card">
-										<img
-											src="media/albuquerque.png"
-											alt="Albuquerque burrito" />
+										<div class="item-img">
+											<img
+												src="media/albuquerque.png"
+												alt="Albuquerque burrito" />
+										</div>
 										<div class="item-info">
 											<h4 class="item-header">Albuquerque burrito</h4>
 											<div class="price">$<span>5.99</span></div>
@@ -224,9 +234,11 @@
 									</div>
 
 									<div class="item-card">
-										<img
-											src="media/elasado.jpg"
-											alt="South valley burrito" />
+										<div class="item-img">
+											<img
+												src="media/elasado.jpg"
+												alt="South valley burrito" />
+										</div>
 										<div class="item-info">
 											<h4 class="item-header">South Valley Burrito</h4>
 											<div class="price">$<span>5.99</span></div>
@@ -247,9 +259,11 @@
 									</div>
 									<div class="items-container">
 										<div class="item-card">
-											<img
-												src="media/classicplatter.webp"
-												alt="Pollo platter A" />
+											<div class="item-img">
+												<img
+													src="media/classicplatter.webp"
+													alt="Pollo platter A" />
+											</div>
 											<div class="item-info">
 												<h4 class="item-header">Pollo Platter A</h4>
 												<div class="price">$<span>5.99</span></div>
@@ -263,9 +277,11 @@
 										</div>
 
 										<div class="item-card">
-											<img
-												src="media/polloplatter2.webp"
-												alt="chicken-tenders" />
+											<div class="item-img">
+												<img
+													src="media/polloplatter2.webp"
+													alt="chicken-tenders" />
+											</div>
 											<div class="item-info">
 												<h4 class="item-header">Pollo Platter B</h4>
 												<div class="price">$<span>5.99</span></div>
@@ -279,9 +295,11 @@
 										</div>
 
 										<div class="item-card">
-											<img
-												src="media/chickenbox.png"
-												alt="pollo box 10pc" />
+											<div class="item-img">
+												<img
+													src="media/chickenbox.png"
+													alt="pollo box 10pc" />
+											</div>
 											<div class="item-info">
 												<h4 class="item-header">10 pc Pollo Box</h4>
 												<div class="price">$<span>9.99</span></div>
@@ -296,9 +314,11 @@
 										</div>
 
 										<div class="item-card">
-											<img
-												src="media/chickenbox.png"
-												alt="pollo box 6pc" />
+											<div class="item-img">
+												<img
+													src="media/chickenbox.png"
+													alt="pollo box 6pc" />
+											</div>
 											<div class="item-info">
 												<h4 class="item-header">6 pc Pollo Bucket</h4>
 												<div class="price">$<span>5.99</span></div>
@@ -320,15 +340,17 @@
 										</div>
 										<div class="items-container">
 											<div class="item-card">
-												<img
-													src="media/chicken-tenders.webp"
-													alt="chicken tenders" />
+												<div class="item-img">
+													<img
+														src="media/chicken-tenders.webp"
+														alt="chicken tenders" />
+												</div>
 												<div class="item-info">
-													<h4 class="item-header">6 pc Pollo Bucket</h4>
-													<div class="price">$<span>5.99</span></div>
+													<h4 class="item-header">6 pc Pollo Tenders</h4>
+													<div class="price">$<span>4.99</span></div>
 													<p class="item-description">
 														Golden, crispy chicken strips served with your
-														choice of dipping sauce (3pc).
+														choice of dipping sauce (6pc).
 													</p>
 													<div class="card-bottom">
 														<button class="btn menu-add">Order Now</button>
@@ -337,9 +359,12 @@
 											</div>
 
 											<div class="item-card">
-												<img
-													src="media/pollofries.png"
-													alt="french fries" />
+												<div class="item-img">
+													<img
+														class="item-img"
+														src="media/pollofries.png"
+														alt="french fries" />
+												</div>
 												<div class="item-info">
 													<h4 class="item-header">Pollo Curly fries</h4>
 													<div class="price">$<span>2.50</span></div>
@@ -354,12 +379,15 @@
 											</div>
 
 											<div class="item-card">
-												<img
-													src="media/nuggets.png"
-													alt="Chicken nuggets" />
+												<div class="item-img">
+													<img
+														class="item-img"
+														src="media/nuggets.png"
+														alt="Chicken nuggets" />
+												</div>
 												<div class="item-info">
 													<h4 class="item-header">Chicken Nuggets</h4>
-													<div class="price">$<span>5.99</span></div>
+													<div class="price">$<span>4.99</span></div>
 													<p class="item-description">
 														Crispy, tender chicken bites served with your choice
 														of dipping sauce (6pc).
@@ -371,9 +399,11 @@
 											</div>
 
 											<div class="item-card">
-												<img
-													src="media/nachos.jpg"
-													alt="nachos" />
+												<div class="item-img">
+													<img
+														src="media/nachos.jpg"
+														alt="nachos" />
+												</div>
 												<div class="item-info">
 													<h4 class="item-header">Nachos</h4>
 													<div class="price">$<span>5.99</span></div>
@@ -394,12 +424,14 @@
 											</div>
 											<div class="items-container">
 												<div class="item-card">
-													<img
-														src="media/ChickenSandwich.png"
-														alt="chicken sandwich" />
+													<div class="item-img">
+														<img
+															src="media/ChickenSandwich.png"
+															alt="chicken sandwich" />
+													</div>
 													<div class="item-info">
 														<h4 class="item-header">Crispy Chicken Sandwich</h4>
-														<div class="price">$<span>3.99</span></div>
+														<div class="price">$<span>5.99</span></div>
 														<p class="item-description">
 															Juicy, crispy chicken breast on a soft bun with
 															lettuce, tomato, and your choice of sauce.
@@ -411,9 +443,11 @@
 												</div>
 
 												<div class="item-card">
-													<img
-														src="media/grilledsandwich.png"
-														alt="Grilled chicken sandwich" />
+													<div class="item-img">
+														<img
+															src="media/grilledsandwich.png"
+															alt="Grilled chicken sandwich" />
+													</div>
 													<div class="item-info">
 														<h4 class="item-header">
 															Grilled Chicken Sandwich
@@ -431,9 +465,11 @@
 												</div>
 
 												<div class="item-card">
-													<img
-														src="media/avocadosandwich.png"
-														alt="el aguacate sandwich" />
+													<div class="item-img">
+														<img
+															src="media/avocadosandwich.png"
+															alt="el aguacate sandwich" />
+													</div>
 													<div class="item-info">
 														<h4 class="item-header">
 															Avocado Chicken Sandwich
@@ -450,9 +486,11 @@
 												</div>
 
 												<div class="item-card">
-													<img
-														src="media/spicychicken.png"
-														alt="Spicy chicken sandwich" />
+													<div class="item-img">
+														<img
+															src="media/spicychicken.png"
+															alt="Spicy chicken sandwich" />
+													</div>
 													<div class="item-info">
 														<h4 class="item-header">Spicy Chicken Sandwich</h4>
 														<div class="price">$<span>5.99</span></div>
@@ -473,9 +511,11 @@
 												</div>
 												<div class="items-container">
 													<div class="item-card">
-														<img
-															src="media/applepie.png"
-															alt="Apple pie" />
+														<div class="item-img">
+															<img
+																src="media/applepie.png"
+																alt="Apple pie" />
+														</div>
 														<div class="item-info">
 															<h4 class="item-header">Apple Pie</h4>
 															<div class="price">$<span>5.99</span></div>
@@ -490,9 +530,11 @@
 													</div>
 
 													<div class="item-card">
-														<img
-															src="media/milkshake.png"
-															alt="strawberry milkshake" />
+														<div class="item-img">
+															<img
+																src="media/milkshake.png"
+																alt="strawberry milkshake" />
+														</div>
 														<div class="item-info">
 															<h4 class="item-header">Milkshake</h4>
 															<div class="price">$<span>3.19</span></div>
@@ -507,9 +549,11 @@
 													</div>
 
 													<div class="item-card">
-														<img
-															src="media/frenchstix.png"
-															alt="french toast sticks" />
+														<div class="item-img">
+															<img
+																src="media/frenchstix.png"
+																alt="french toast sticks" />
+														</div>
 														<div class="item-info">
 															<h4 class="item-header">French Toast Stix</h4>
 															<div class="price">$<span>4.99</span></div>
@@ -524,9 +568,11 @@
 													</div>
 
 													<div class="item-card">
-														<img
-															src="media/churros.png"
-															alt="churros" />
+														<div class="item-img">
+															<img
+																src="media/churros.png"
+																alt="churros" />
+														</div>
 														<div class="item-info">
 															<h4 class="item-header">Churros</h4>
 															<div class="price">$<span>4.99</span></div>
@@ -549,9 +595,11 @@
 													</div>
 													<div class="items-container">
 														<div class="item-card">
-															<img
-																src="media/coke.webp"
-																alt="Coke" />
+															<div class="item-img">
+																<img
+																	src="media/coke.webp"
+																	alt="Coke" />
+															</div>
 															<div class="item-info">
 																<h4 class="item-header">Fountain Drink</h4>
 																<div class="price">$<span>0.99</span></div>
@@ -568,12 +616,14 @@
 														</div>
 
 														<div class="item-card">
-															<img
-																src="media/polloscoffee.png"
-																alt="Coffee" />
+															<div class="item-img">
+																<img
+																	src="media/polloscoffee.png"
+																	alt="Coffee" />
+															</div>
 															<div class="item-info">
 																<h4 class="item-header">Coffee</h4>
-																<div class="price">$<span>0.99</span></div>
+																<div class="price">$<span>2.99</span></div>
 																<p class="item-description">
 																	Freshly brewed, rich and aromatic—served hot
 																	or iced for your perfect pick-me-up.
