--- a/Services.html
+++ b/Services.html
@@ -101,7 +101,14 @@
             <p>At Los Pollos Hermanoes we offer only the best delivery services. Just click the delivery option when you go to the website and we will handle the rest</p>
         </div>
     </div>
-    
+    <script
+    type="module"
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+  ></script>
+  <script
+    nomodule
+    src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+  ></script>
     
 </body>
 </html>
