--- a/location.html
+++ b/location.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="location.css">
     <title>GetLocation</title>
 </head>
 <body>
 
+    <div class ="button-container">
     <button onclick="getLocation()">Get Location</button>
+    </div>
 
-    <p id="demo"></p>
+    <p id="demo">
+
+    </p>
+
+    <div id="map">
+        
+
+    </div>
+
 
     <script>
         function getLocation() {
