Discount now appears properly on reciept

--- a/receipt.html
+++ b/receipt.html
@@ -30,7 +30,7 @@
         <div class="userNav">
             <a id ="Set-a-location" href="Sign-in.html" target="_blank" rel="noopener noreferrer">Set a Location</a>
             <ion-icon  id="UserProf"name="person-circle-outline"></ion-icon>
-            <a class= "btnLink" href="menu.html" target="_blank" rel="noopener noreferrer">Order Now</a>
+            <a class= "btnLink" href="MenuPage.html" target="_blank" rel="noopener noreferrer">Order Now</a>
         </div>
     </div>
     
