--- a/Who.html
+++ b/Who.html
@@ -34,7 +34,7 @@
 			<div class="logo">
 				<img
 					id="logo"
-					src="LosPollosImages-gif/LosPollosHermanosLogo2.webp"
+					src="LosPollosHermanosLogo2.webp"
 					alt="LosPollosHermanosLogo" />
 			</div>
 
