Updated Modal Buttons to Toggle

--- a/Who.html
+++ b/Who.html
@@ -98,6 +98,7 @@
 		</header>
 
 		<h1>WHO WE ARE</h1>
+		<hr />
 
 		<div class="Vid">
 			<video
@@ -155,6 +156,115 @@
 				</p>
 			</div>
 		</div>
+
+		<!-- ----------------------------------------------------------------------- -->
+		<!--                            Footer Section                           -->
+		<!-- ----------------------------------------------------------------------- -->
+		<footer>
+			<div class="footer-container">
+				<div class="about">
+					<a href="#">Services</a>
+					<a href="#">Testimonials</a>
+					<a href="#">Contact us</a>
+				</div>
+				<div class="icon-footer">
+					<a href="http://"><ion-icon name="logo-facebook"></ion-icon></a>
+					<a href="http://"><ion-icon name="logo-twitter"></ion-icon></a>
+					<a
+						href="https://www.instagram.com/eatlospolloshermanos/"
+						target="_blank"
+						><ion-icon name="logo-instagram"></ion-icon
+					></a>
+				</div>
+				<section class="secret">
+					<img
+						id="SecretGus"
+						src="LosPollosImages-gif/Gus Frank Icon.svg"
+						alt="GusSecret" />
+					<audio
+						src="LosPollosImages-gif/Gustavo Frank saying hello.mp3"></audio>
+				</section>
+			</div>
+		</footer>
+		<!-- ----------------------------------------------------------------------- -->
+		<!--                                Modal Boxes                                -->
+		<!-- ----------------------------------------------------------------------- -->
+		<section class="SecretModal Main">
+			<div class="secretpopup-container">
+				<div class="SecretCard">
+					<h3>Take this code</h3>
+					<p>RESTGUS</p>
+				</div>
+			</div>
+		</section>
+		<section class="modal Main">
+			<div class="popup-container">
+				<div
+					id="Main-Delivery-modal"
+					class="popup-card">
+					<div class="popup-head">
+						<h5>Order details</h5>
+						<button class="Closebtn Main">&times;</button>
+					</div>
+
+					<div class="P-D-btns-container">
+						<button
+							class="P-D-btns Delivery-Main"
+							id="Main-Deliverybtn">
+							Delivery
+						</button>
+						<button
+							class="P-D-btns Pickup-Main"
+							id="Main-Pickupbtn">
+							Pickup
+						</button>
+					</div>
+					<p>Place you Scheduled order right now</p>
+					<div class="form-container">
+						<div class="Main-in-container">
+							<label for="Location"><h4>Deliver To:</h4></label>
+							<input
+								name="location"
+								type="text"
+								placeholder="Enter Location" />
+						</div>
+						<div class="Main-in-container">
+							<label for="Date"><h4>Choose Date:</h4></label>
+							<select
+								name="Date"
+								id="Date-Dropdown">
+								<option value="option1">Today</option>
+								<option value="option2">tomorrow</option>
+								<option value="option3">11/10</option>
+								<option value="option4">11/11</option>
+							</select>
+						</div>
+						<div class="Main-in-container">
+							<label for="Time"><h4>Choose Time:</h4></label>
+							<select
+								name="Date"
+								id="time-Dropdown">
+								<option value="option1">12:00pm</option>
+								<option value="option2">12:30pm</option>
+								<option value="option3">1:00pm</option>
+								<option value="option4">1:30pm</option>
+							</select>
+						</div>
+					</div>
+					<button class="Update-btn">Update</button>
+				</div>
+			</div>
+		</section>
+		<script
+			type="module"
+			src="script.js"></script>
+		<script
+			type="module"
+			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+		<script
+			nomodule
+			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 		<script
 			type="module"
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
