--- a/MenuPage.html
+++ b/MenuPage.html
@@ -763,7 +763,9 @@
           nomodule
           src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
         ></script>
-        
+        <script>
+            
+        </script>
       </nav>
     </div>
   </body>
