--- a/Who.html
+++ b/Who.html
@@ -61,6 +61,12 @@
 					rel="noopener noreferrer"
 					>Rewards</a
 				>
+				<a
+					id="Incoming"
+					href="features.html"
+					rel="noopener noreferrer"
+					>Incoming Items</a
+				>
 				<input
 					type="search"
 					name="Searchbar"
