--- a/catering-form.html
+++ b/catering-form.html
@@ -42,7 +42,9 @@
 	</head>
 
 	<body>
-		<header class="header">
+		<header
+			id="Page1"
+			class="header">
 			<div class="logo">
 				<img
 					id="logo"
@@ -52,48 +54,52 @@
 			<div class="nav">
 				<a
 					id="Menu"
-					href="http://"
-					target="_blank"
+					href="MenuPage.html"
 					rel="noopener noreferrer"
 					>Menu</a
 				>
 				<a
 					id="Who we are"
-					href="http://"
-					target="_blank"
+					href="Who.html"
 					rel="noopener noreferrer"
-					>Who We Are</a
+					>Who we are</a
 				>
 				<a
 					id="Rewards"
-					href="http://"
-					target="_blank"
+					href="rewards.html"
 					rel="noopener noreferrer"
 					>Rewards</a
 				>
-				<a
-					id="Catering"
-					href="http://"
-					target="_blank"
+        <a
+					id="Incoming"
+					href="features.html"
 					rel="noopener noreferrer"
-					>Catering</a
+					>Incoming Items</a
 				>
+				<input
+					type="search"
+					name="Searchbar"
+					id="Searchbar"
+					placeholder="Search" />
 			</div>
 			<div class="userNav">
+				<button class="Modalbutton Main">
+					<ion-icon name="location"></ion-icon>Set a Location
+				</button>
+
+				<a href="Sign-in.html"
+					><ion-icon
+						id="UserProf"
+						name="person-circle-outline"></ion-icon
+				></a>
+				<a href="FinalCartpage.html"
+					><ion-icon
+						id="Cart"
+						name="cart"></ion-icon
+				></a>
 				<a
-					id="Set-a-location"
-					href="http://"
-					target="_blank"
-					rel="noopener noreferrer"
-					>Set a Location</a
-				>
-				<ion-icon
-					id="UserProf"
-					name="person-circle-outline"></ion-icon>
-				<a
-					class="btnLink"
-					href="http://"
-					target="_blank"
+					id="Navbtn"
+					href="MenuPage.html"
 					rel="noopener noreferrer"
 					>Order Now</a
 				>
@@ -140,7 +146,7 @@
 								</div>
 
 								<div class="info-inner-right">
-									<img src="media/catering-party.png" />
+									<img src="LosPollosImages-gif/catering-party.png" />
 								</div>
 							</div>
 						</div>
@@ -151,7 +157,7 @@
 					<!-- ----------------------------------------------------------------------- -->
 					<section class="form-section">
 						<div class="form-container">
-							<img src="media/red-logo.png" />
+							<img src="LosPollosImages-gif/red-logo.png" />
 							<h2>Plan Your Event with Us</h2>
 							<p>
 								Get started by filling out this form, and we'll reach out to you
@@ -263,11 +269,11 @@
     <!-- ----------------------------------------------------------------------- -->
     <footer>
 		<div class="footer-container">
-		  <div class="about">
-			<a href="#">Services</a>
-			<a href="#">Testimonials</a>
-			<a href="#">Contact us</a>
-		  </div>
+			<div class="about">
+				<a href="Services.html">Services</a>
+				
+				<a href="Contact.html">Contact us</a>
+			</div>
 		  <div class="icon-footer">
 			<a href="http://"><ion-icon name="logo-facebook"></ion-icon></a>
 			<a href="http://"><ion-icon name="logo-twitter"></ion-icon></a>
@@ -280,7 +286,7 @@
 		  <section class="secret">
 			<img
 			  id="SecretGus"
-			  src="media/Gus Frank Icon.svg"
+			  src="LosPollosImages-gif/Gus Frank Icon.svg"
 			  alt="GusSecret"
 			/>
 		  </section>
@@ -298,6 +304,20 @@
 		nomodule
 		src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
 	  ></script>
+	  <script>
+		document.addEventListener("DOMContentLoaded", function () {
+	  const userStatus = localStorage.getItem("userStatus");
+	  if (userStatus == "guest") {
+		  document.getElementById("Rewards").style.display = "none";
+		  document.getElementById("UserProf").style.display = "none";
+	  }
+	  else {
+		  document.getElementById("Rewards").style.display = "block";
+		  document.getElementById("UserProf").style.display = "block";
+	  }
+  });
+  
+	  </script>
   
 	</body>
 </html>
