--- a/catering.html
+++ b/catering.html
@@ -50,26 +50,69 @@
 		<!-- ----------------------------------------------------------------------- -->
 		<!--                            Page Navigation                            -->
 		<!-- ----------------------------------------------------------------------- -->
-        <header id="MenuPage" class="header">
-            <div class="logo">
-                <img id = "logo" src="LosPollosHermanosLogo2.webp" alt="LosPollosHermanosLogo">
-            </div>
-            <div class="nav">
-                <a id ="Menu">Menu</a>
-                <a id ="Who we are"href="Who.html" rel="noopener noreferrer">Who we are</a>
-                <a id ="Rewerds"href="http://" target="_blank" rel="noopener noreferrer">Rewards</a>
-                <a id ="Catering"href="http://" target="_blank" rel="noopener noreferrer">Menu</a>
-            </div>
-            <div class="userNav">
-                <button class="Modalbutton Menu"><ion-icon name="location"></ion-icon>Set a Location</button>
-                <a href="Sign-in.html"
-                  ><ion-icon id="UserProf" name="person-circle-outline"></ion-icon
-                ></a>
-                <a href="FinalCartpage.html"><ion-icon id="Cart" name="cart"></ion-icon></a>
-                <a id="Navbtn" href="MenuPage.html" rel = "noopener noreferrer">Order Now</a
-                >
-            </div>
-        </header>
+        <header
+        id="MenuPage"
+        class="header">
+        <div class="logo">
+            <img
+                id="logo"
+                src="LosPollosHermanosLogo2.webp"
+                alt="LosPollosHermanosLogo" />
+        </div>
+        <div class="nav">
+            <a
+                id="Menu"
+                href="MenuPage.html"
+                rel="noopener noreferrer"
+                >Menu</a
+            >
+            <a
+                id="Who we are"
+                href="Who.html"
+                rel="noopener noreferrer"
+                >Who we are</a
+            >
+            <a
+                id="Rewards"
+                href="rewards.html"
+                rel="noopener noreferrer"
+                >Rewards</a
+            >
+    <a
+                id="Incoming"
+                href="features.html"
+                rel="noopener noreferrer"
+                >Incoming Items</a
+            >
+            <input
+                type="search"
+                name="Searchbar"
+                id="Searchbar"
+                placeholder="Search" />
+        </div>
+        <div class="userNav">
+            <button class="Modalbutton Main">
+                <ion-icon name="location"></ion-icon>Set a Location
+            </button>
+
+            <a href="Sign-in.html"
+                ><ion-icon
+                    id="UserProf"
+                    name="person-circle-outline"></ion-icon
+            ></a>
+            <a href="FinalCartpage.html"
+                ><ion-icon
+                    id="Cart"
+                    name="cart"></ion-icon
+            ></a>
+            <a
+                id="Navbtn"
+                href="MenuPage.html"
+                rel="noopener noreferrer"
+                >Order Now</a
+            >
+        </div>
+    </header>
 
 		<!-- ----------------------------------------------------------------------- -->
 		<!--                               Menu Start                                -->
@@ -78,7 +121,7 @@
 		<div class="menu-body">
 			<nav class="menu-section">
 				<div class="cta">
-					<img src="LosPollosImage-gif/lph-logos.png" />
+					<img src="LosPollosImages-gif/lph-logos.png" />
 				</div>
             </nav>
 
@@ -399,11 +442,11 @@
     <!-- ----------------------------------------------------------------------- -->
     <footer>
 		<div class="footer-container">
-		  <div class="about">
-			<a href="#">Services</a>
-			<a href="#">Testimonials</a>
-			<a href="#">Contact us</a>
-		  </div>
+            <div class="about">
+                <a href="Services.html">Services</a>
+                
+                <a href="Contact.html">Contact us</a>
+            </div>
 		  <div class="icon-footer">
 			<a href="http://"><ion-icon name="logo-facebook"></ion-icon></a>
 			<a href="http://"><ion-icon name="logo-twitter"></ion-icon></a>
@@ -416,7 +459,7 @@
 		  <section class="secret">
 			<img
 			  id="SecretGus"
-			  src="media/Gus Frank Icon.svg"
+			  src="LosPollosImages-gif/Gus Frank Icon.svg"
 			  alt="GusSecret"
 			/>
 		  </section>
@@ -436,5 +479,19 @@
 		nomodule
 		src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
 	  ></script>
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
+      const userStatus = localStorage.getItem("userStatus");
+      if (userStatus == "guest") {
+          document.getElementById("Rewards").style.display = "none";
+          document.getElementById("UserProf").style.display = "none";
+      }
+      else {
+          document.getElementById("Rewards").style.display = "block";
+          document.getElementById("UserProf").style.display = "block";
+      }
+  });
+  
+      </script>
 	</body>
 </html>
