--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
 					rel="noopener noreferrer"
 					>Rewards</a
 				>
+        <a
+					id="Incoming"
+					href="features.html"
+					rel="noopener noreferrer"
+					>Incoming Items</a
+				>
 				<input
 					type="search"
 					name="Searchbar"
@@ -215,7 +221,7 @@
 						</p>
 						<a
 							class="btn"
-							href="http://"
+							href="catering-form.html"
 							>Order Catering</a
 						>
 					</div>
@@ -235,7 +241,7 @@
 						</p>
 						<a
 							class="btn"
-							href="http://"
+							href="MenuPage.html"
 							>Order now</a
 						>
 					</div>
@@ -466,5 +472,19 @@
 		<script
 			nomodule
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
+      const userStatus = localStorage.getItem("userStatus");
+      if (userStatus == "guest") {
+          document.getElementById("Rewards").style.display = "none";
+          document.getElementById("UserProf").style.display = "none";
+      }
+      else {
+          document.getElementById("Rewards").style.display = "block";
+          document.getElementById("UserProf").style.display = "block";
+      }
+  });
+  
+      </script>
 	</body>
 </html>
