--- a/rewards.html
+++ b/rewards.html
@@ -49,6 +49,12 @@
 					rel="noopener noreferrer"
 					>Rewards</a
 				>
+				<a
+					id="Incoming"
+					href="features.html"
+					rel="noopener noreferrer"
+					>Incoming Items</a
+				>
 				<input
 					type="search"
 					name="Searchbar"
@@ -120,6 +126,7 @@
 });
 
     </script>
+	
     
 </body>
 </html>
