--- a/index.html
+++ b/index.html
@@ -472,6 +472,7 @@
 		<script
 			nomodule
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+			<script>localStorage.setItem("userStatus", "guest");</script>
       <script>
         document.addEventListener("DOMContentLoaded", function () {
       const userStatus = localStorage.getItem("userStatus");
