--- a/index.html
+++ b/index.html
@@ -476,9 +476,9 @@
       <script>
         document.addEventListener("DOMContentLoaded", function () {
       const userStatus = localStorage.getItem("userStatus");
-      if (userStatus == "guest") {
+      if (userStatus === "guest") {
           document.getElementById("Rewards").style.display = "none";
-          document.getElementById("UserProf").style.display = "none";
+        //   document.getElementById("UserProf").style.display = "none";
       }
       else {
           document.getElementById("Rewards").style.display = "block";
