--- a/catering.html
+++ b/catering.html
@@ -463,6 +463,34 @@
 		</div>
 		
 	  </footer>
+      <section class="modal Who">
+        <div class="popup-container">
+          <div id="Main-Delivery-modal" class="popup-card">
+            <div class="popup-head">
+              <h5>ORDER DETAILS</h5>
+              <button class="Closebtn Who">&times;</button>
+            </div>
+
+            <div class="P-D-btns-container">
+              <input
+                          type="checkbox"
+                          id="toggle"
+                          class="toggleCheckbox" />
+                      <label
+                          for="toggle"
+                          class="toggleContainer">
+                          <div class="DeliveryDiv Who">Delivery</div>
+                          <div class="PickupDiv Who">Pickup</div>
+                      </label>
+            </div>
+            <p class = "info-txt">Set a Delivery Address or Schedule Pickup</p>
+            <div class="form-container">
+              
+            </div>
+            <button id="UpdateBtn" class="Update-Btn">Update</button>
+          </div>
+        </div>
+      </section>
         
         <script src = "menu.js"></script>
         <script
