--- a/index.html
+++ b/index.html
@@ -396,7 +396,33 @@
 			</div>
 		</section>
 		<section class="modal Main">
-			
+			<div class="popup-container">
+				<div
+					id="Main-Delivery-modal"
+					class="popup-card">
+					<div class="popup-head">
+						<h5>ORDER DETAILS</h5>
+						<button class="Closebtn Main">&times;</button>
+					  </div>
+		
+					  <div class="P-D-btns-container">
+						<input
+									type="checkbox"
+									id="toggle"
+									class="toggleCheckbox" />
+								<label
+									for="toggle"
+									class="toggleContainer">
+									<div class="DeliveryDiv Main">Delivery</div>
+									<div class="PickupDiv Main">Pickup</div>
+								</label>
+					  </div>
+					  <p class = "info-txt">Set a Delivery Address or Schedule Pickup</p>
+					  <div class="form-container">
+						
+					  </div>
+					  <button id="UpdateBtn" class="Update-Btn">Update</button>
+				  </div>
 			</div>
 		</section>
 		<script
