--- a/MenuPage.html
+++ b/MenuPage.html
@@ -43,6 +43,7 @@
         >
         <input
           type="search"
+          autocomplete="off"
           name="Searchbar"
           id="Searchbar"
           placeholder="Search"
