Rewards but location modal not budging yet

--- a/MenuPage.html
+++ b/MenuPage.html
@@ -38,6 +38,8 @@
 			<div class="logo">
 				<img
 					id="logo"
+					href="index.html"
+					rel="noopener noreferrer"
 					src="LosPollosHermanosLogo2.webp"
 					alt="LosPollosHermanosLogo" />
 			</div>
@@ -100,7 +102,7 @@
 					<ul class="menu-nav">
 						<li><a href="#BreakfastSpecialties">Breakfast Specialties</a></li>
 						<li><a href="#PollosBurritos">Pollos Burritos</a></li>
-						<li><a href="#PolloSpecialties">Pollo Specialties</a></li>
+						<li><a href="#PollosSpecialties">Pollo Specialties</a></li>
 						<li><a href="#Sandwiches">Sandwiches</a></li>
 						<li><a href="#Desserts">Desserts</a></li>
 						<li><a href="#Beverages">Beverages</a></li>
