--- a/FinalCartpage.html
+++ b/FinalCartpage.html
@@ -473,9 +473,8 @@
 		<footer>
 			<div class="footer-container">
 				<div class="about">
-					<a href="#">Services</a>
-					<a href="#">Testimonials</a>
-					<a href="#">Contact us</a>
+					<a href="Services.html">Services</a>
+					<a href="Contact.html">Contact us</a>
 				</div>
 				<div class="icon-footer">
 					<a href="http://"><ion-icon name="logo-facebook"></ion-icon></a>
@@ -491,6 +490,8 @@
 						id="SecretGus"
 						src="LosPollosImages-gif/Gus Frank Icon.svg"
 						alt="GusSecret" />
+					<audio
+						src="LosPollosImages-gif/Gustavo Frank saying hello.mp3"></audio>
 				</section>
 			</div>
 		</footer>
