--- a/MenuPage.html
+++ b/MenuPage.html
@@ -23,20 +23,13 @@
 			rel="icon"
 			type="Image/x-icon"
 			href="LosPollosImages-gif/LosPollosHermanosLogo1.png" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Goblin+One&family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
-			rel="stylesheet" />
 	</head>
 	<body>
 		<!-- ----------------------------------------------------------------------- -->
 		<!--                            Sticky Navigation                            -->
 		<!-- ----------------------------------------------------------------------- -->
-
-		<!-- ----------------------------------------------------------------------- -->
-		<!--                            Sticky Navigation                            -->
-		<!-- ----------------------------------------------------------------------- -->
 		<header
-			id="Page1"
+			id="MenuPage"
 			class="header">
 			<div class="logo">
 				<img
@@ -63,6 +56,7 @@
 					rel="noopener noreferrer"
 					>Rewards</a
 				>
+
 				<a
 					id="Incoming"
 					href="features.html"
@@ -71,12 +65,13 @@
 				>
 				<input
 					type="search"
+					autocomplete="off"
 					name="Searchbar"
 					id="Searchbar"
 					placeholder="Search" />
 			</div>
 			<div class="userNav">
-				<button class="Modalbutton Main">
+				<button class="Modalbutton Menu">
 					<ion-icon name="location"></ion-icon>Set a Location
 				</button>
 
