--- a/MenuPage.html
+++ b/MenuPage.html
@@ -108,9 +108,10 @@
 
 				<div class="menu-body">
 					<ul class="menu-nav">
-						<li><a href="#BreakfastSpecialtiess">Breakfast Specialties</a></li>
+						<li><a href="#BreakfastSpecialties">Breakfast Specialties</a></li>
 						<li><a href="#PollosBurritos">Pollos Burritos</a></li>
-						<li><a href="#PolloSpecialties">Pollo Specialties</a></li>
+						<li><a href="#PollosSpecialties">Pollo Specialties</a></li>
+						<li><a href="#Sides">Sides</a></li>
 						<li><a href="#Sandwiches">Sandwiches</a></li>
 						<li><a href="#Desserts">Desserts</a></li>
 						<li><a href="#Beverages">Beverages</a></li>
