--- a/rewards.html
+++ b/rewards.html
@@ -148,8 +148,8 @@
 		<footer>
 			<div class="footer-container">
 				<div class="about">
-					<a href="#">Services</a>
-					<a href="#">Contact us</a>
+					<a href="Services.html">Services</a>
+					<a href="Contact.html">Contact us</a>
 				</div>
 				<div class="icon-footer">
 					<a href="http://"><ion-icon name="logo-facebook"></ion-icon></a>
