--- a/FinalCartpage.html
+++ b/FinalCartpage.html
@@ -445,7 +445,21 @@
 							<h4 id="P">Price</h4>
 						</div>
 						<div class="Item-Qty-Price-List">
-							
+							<!-- <div class="Item-Container">
+                <img id="Item-img" src="" alt="ItemImg" />
+                <p>Itemname</p>
+              </div>
+              <div class="Qty-Container">
+                <input
+                  type="number"
+                  name="Quantity-Counter"
+                  id="Quantity"
+                  value="1"
+                />
+              </div>
+              <div class="Price-Container">
+                <p>Price</p>
+              </div> -->
 						</div>
 					</div>
 
@@ -488,24 +502,5 @@
 			nomodule
 			src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 		<script src="script.js"></script>
-		<script>
-			document.addEventListener("DOMContentLoaded", function () {
-		  const userStatus = localStorage.getItem("userStatus");
-		  if (userStatus === "guest") {
-			  document.getElementById("Rewards").style.display = "none";
-			
-		  }
-		  else if (userStatus === "logged-in") {
-			  document.getElementById("UserProf").style.display = "block";
-			  document.getElementById("Rewards").style.display = "none";
-		  }
-		  else {
-			  document.getElementById("Rewards").style.display = "block";
-			  document.getElementById("UserProf").style.display = "block";
-		  }
-	  });
-	
-	  
-		  </script>
 	</body>
 </html>
